--- a/PeopleProTraining/PeopleProTraining/Views/Employees/Index.cshtml
+++ b/PeopleProTraining/PeopleProTraining/Views/Employees/Index.cshtml
@@ -15,7 +15,7 @@
             @Html.DisplayNameFor(model => model.Building.BuildingName)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Department.DepartmentCode)
+            @Html.DisplayNameFor(model => model.Department.DepartmentName)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.FirstName)
@@ -32,7 +32,7 @@
             @Html.DisplayFor(modelItem => item.Building.BuildingName)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.Department.DepartmentCode)
+            @Html.DisplayFor(modelItem => item.Department.DepartmentName)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.FirstName)
