--- a/PeopleProTraining/PeopleProTraining/Views/Employees/Details.cshtml
+++ b/PeopleProTraining/PeopleProTraining/Views/Employees/Details.cshtml
@@ -19,11 +19,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Department.DepartmentCode)
+            @Html.DisplayNameFor(model => model.Department.DepartmentName)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Department.DepartmentCode)
+            @Html.DisplayFor(model => model.Department.DepartmentName)
         </dd>
 
         <dt>
