--- a/PeopleProTraining/PeopleProTraining/Views/Buildings/Index.cshtml
+++ b/PeopleProTraining/PeopleProTraining/Views/Buildings/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<PeopleProTraining.Models.Building>
+﻿@model IEnumerable<PeopleProTraining.Dal.Models.Building>
 
 @{
     ViewBag.Title = "Index";
@@ -13,13 +13,13 @@
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.Department.Name)
-        </th>
-        <th>
             @Html.DisplayNameFor(model => model.Address)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Name)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Department.Name)
         </th>
         <th></th>
     </tr>
@@ -27,18 +27,18 @@
 @foreach (var item in Model) {
     <tr>
         <td>
-            @Html.DisplayFor(modelItem => item.Department.Name)
-        </td>
-        <td>
             @Html.DisplayFor(modelItem => item.Address)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Name)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.ID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.ID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.ID })
+            @Html.DisplayFor(modelItem => item.Department.Name)
+        </td>
+        <td>
+            @Html.ActionLink("Edit", "Edit", new { id=item.BuildingId }) |
+            @Html.ActionLink("Details", "Details", new { id=item.BuildingId }) |
+            @Html.ActionLink("Delete", "Delete", new { id=item.BuildingId })
         </td>
     </tr>
 }
