added field to employees, added more to department details

--- a/PeopleProTraining/PeopleProTraining/Views/Employees/Details.cshtml
+++ b/PeopleProTraining/PeopleProTraining/Views/Employees/Details.cshtml
@@ -20,6 +20,22 @@
         </dd>
 
         <dt>
+            @Html.DisplayNameFor(model => model.LastName)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.LastName)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.EmploymentDate)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.EmploymentDate)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.Department.Name)
         </dt>
 
