--- a/PeopleProTraining/PeopleProTraining/Views/Departments/Details.cshtml
+++ b/PeopleProTraining/PeopleProTraining/Views/Departments/Details.cshtml
@@ -18,7 +18,54 @@
         <dd>
             @Html.DisplayFor(model => model.Name)
         </dd>
-
+        <dt>
+            @Html.DisplayNameFor(model => Model.Buildings)
+        </dt>
+        <dd>
+            <table class="table">
+                <tr>
+                    <th>Building Name</th>
+                    <th>Address</th>
+                </tr>
+                @foreach (var item in Model.Buildings)
+                {
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Name)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Address)
+                        </td>
+                    </tr>
+                }
+            </table>
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => Model.Employees)
+        </dt>
+        <dd>
+            <table class="table">
+                <tr>
+                    <th>First Name</th>
+                    <th>Last Name</th>
+                    <th>Employment Date</th>
+                </tr>
+                @foreach (var item in Model.Employees)
+                {
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.FirstName)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.LastName)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.EmploymentDate)
+                        </td>
+                    </tr>
+                }
+            </table>
+        </dd>
     </dl>
 </div>
 <p>
