--- a/PeopleProTraining/PeopleProTraining/Views/Employees/Index.cshtml
+++ b/PeopleProTraining/PeopleProTraining/Views/Employees/Index.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Index</h2>
+<h2>Employees</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
@@ -14,6 +14,12 @@
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.FirstName)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.LastName)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.EmploymentDate)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Department.Name)
@@ -25,6 +31,12 @@
     <tr>
         <td>
             @Html.DisplayFor(modelItem => item.FirstName)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.LastName)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.EmploymentDate)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Department.Name)
