began work on ajax code

--- a/PeopleProTraining/PeopleProTraining/Views/Shared/_Layout.cshtml
+++ b/PeopleProTraining/PeopleProTraining/Views/Shared/_Layout.cshtml
@@ -21,6 +21,7 @@
                 @Html.ActionLink("Employees", "Index", "Employees", new { area = "" }, new { @class = "navbar-brand" })
                 @Html.ActionLink("Buildings", "Index", "Buildings", new { area = "" }, new { @class = "navbar-brand" })
                 @Html.ActionLink("Departments", "Index", "Departments", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("DepartmentsAJAX", "Index", "DepartmentsAJAX", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
