--- a/PeopleProTraining/PeoplePro/Views/Employees/Create.cshtml
+++ b/PeopleProTraining/PeoplePro/Views/Employees/Create.cshtml
@@ -28,6 +28,10 @@
                 <span asp-validation-for="Age" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="DepartmentId" class="control-label"></label>
+                <select asp-for="DepartmentId" class ="form-control" asp-items="ViewBag.DepartmentId"></select>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-default" />
             </div>
         </form>
