--- a/PeopleProTraining/PeoplePro/Views/Employees/Edit.cshtml
+++ b/PeopleProTraining/PeoplePro/Views/Employees/Edit.cshtml
@@ -29,6 +29,11 @@
                 <span asp-validation-for="Age" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="DepartmentId" class="control-label"></label>
+                <select asp-for="DepartmentId" class="form-control" asp-items="ViewBag.DepartmentId"></select>
+                <span asp-validation-for="DepartmentId" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-default" />
             </div>
         </form>
