--- a/PeopleProTraining/PeoplePro/Views/Employees/Delete.cshtml
+++ b/PeopleProTraining/PeoplePro/Views/Employees/Delete.cshtml
@@ -29,6 +29,12 @@
         <dd>
             @Html.DisplayFor(model => model.Age)
         </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Department)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Department.Name)
+        </dd>
     </dl>
     
     <form asp-action="Delete">
