--- a/PeopleProTraining/PeoplePro/Views/Employees/Details.cshtml
+++ b/PeopleProTraining/PeoplePro/Views/Employees/Details.cshtml
@@ -28,6 +28,12 @@
         <dd>
             @Html.DisplayFor(model => model.Age)
         </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Department)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Department.Name)
+        </dd>
     </dl>
 </div>
 <div>
