--- a/PeopleProTraining/PeoplePro/Views/Home/About.cshtml
+++ b/PeopleProTraining/PeoplePro/Views/Home/About.cshtml
@@ -4,4 +4,4 @@
 <h2>@ViewData["Title"]</h2>
 <h3>@ViewData["Message"]</h3>
 
-<p>Use this area to provide additional information.</p>
+<p>This is Phi Luu's PeoplePro training exercise for CASS Software Development Group.</p>
