--- a/PeoplePro/PeoplePro/Views/Employees/Index.cshtml
+++ b/PeoplePro/PeoplePro/Views/Employees/Index.cshtml
@@ -10,7 +10,7 @@
     <a asp-action="Create">Create New</a>
 </p>
 <form asp-controller="Employees" asp-action="Index" method="get">
-    <p>
+    <p>Department: 
         <select asp-for="Selected" asp-items="Model.Departments">
             <option value="">All</option>
         </select>
