Added check for existing department/building and some validations

--- a/PeoplePro/PeoplePro/Views/Buildings/Create.cshtml
+++ b/PeoplePro/PeoplePro/Views/Buildings/Create.cshtml
@@ -1,12 +1,12 @@
 ﻿@model PeoplePro.Models.Building
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Create Building";
 }
 
 <h1>Create</h1>
 
-<h4>Building</h4>
+<h4>New Building Entry</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
