--- a/PeoplePro/PeoplePro/Views/Buildings/Index.cshtml
+++ b/PeoplePro/PeoplePro/Views/Buildings/Index.cshtml
@@ -36,7 +36,7 @@
                 <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
             </td>
             <td>
-                <a asp-controller="Departments" asp-action= "Index" method="get">Departments</a>
+                <a asp-controller="Departments" asp-action= "Index" method="get" asp-route-selected= "@item.Name">Departments</a>
             </td>
         </tr>
 }
