--- a/PeoplePro/PeoplePro/Views/Departments/Index.cshtml
+++ b/PeoplePro/PeoplePro/Views/Departments/Index.cshtml
@@ -7,7 +7,7 @@
 <h1>Departments Database</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Create a New Department Entry</a>
 </p>
 <form asp-controller="Departments" asp-action="Index" method="get">
     <p>Building:
