--- a/PeoplePro/PeoplePro/Views/Employees/Index.cshtml
+++ b/PeoplePro/PeoplePro/Views/Employees/Index.cshtml
@@ -7,7 +7,7 @@
 <h1>Employees Database</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Create a New Employee Entry</a>
 </p>
 <form asp-controller="Employees" asp-action="Index" method="get">
     <p>Department: 
