--- a/PeoplePro/PeoplePro/Views/Shared/_Layout.cshtml
+++ b/PeoplePro/PeoplePro/Views/Shared/_Layout.cshtml
@@ -21,7 +21,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-controller="Employees" asp-action="Index">Database</a>
+                <a class="navbar-brand" asp-controller="Buildings" asp-action="Index">Database</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
