--- a/PeoplePro/PeoplePro/Views/Employees/Create.cshtml
+++ b/PeoplePro/PeoplePro/Views/Employees/Create.cshtml
@@ -11,7 +11,7 @@
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <!--<div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="FirstName" class="control-label"></label>
                 <input asp-for="FirstName" class="form-control" />
@@ -27,7 +27,8 @@
                 <label asp-for="Department" class="control-label"></label>
                 <input asp-for="Department" class="form-control" />
                 <span asp-validation-for="Department" class="text-danger"></span>
-            </div>
+            </div>-->
+            @Html.EditorForModel()
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
