--- a/PeoplePro/PeoplePro/Views/Employees/Index.cshtml
+++ b/PeoplePro/PeoplePro/Views/Employees/Index.cshtml
@@ -10,48 +10,12 @@
     <a asp-action="Create">Create a New Employee Entry</a>
 </p>
 <form asp-controller="Employees" asp-action="Index" method="get">
-    <p>Department: 
+    <p>
+        Department:
         <select asp-for="Selected" asp-items="Model.Departments">
             <option value="">All</option>
         </select>
         <input type="submit" value="Filter" />
     </p>
 </form>
-
-
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Employees[0].FirstName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Employees[0].LastName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Employees[0].Department)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model.Employees) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.FirstName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.LastName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Department)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+@Html.DisplayForModel()
