Developing Employee Database

--- a/PeoplePro/PeoplePro/Views/Employee/Index.cshtml
+++ b/PeoplePro/PeoplePro/Views/Employee/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<PeoplePro.Models.Employee>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Employees";
 }
 
 <h1>Index</h1>
@@ -15,6 +15,12 @@
             <th>
                 @Html.DisplayNameFor(model => model.FirstName)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.DepartmentID)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.BuildingID)
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -23,6 +29,12 @@
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.FirstName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.DepartmentID)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.BuildingID)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
