--- a/PeoplePro/PeoplePro/Views/Building/Create.cshtml
+++ b/PeoplePro/PeoplePro/Views/Building/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model PeoplePro.Models.Employee
+﻿@model PeoplePro.Models.Building
 
 @{
     ViewData["Title"] = "Create";
@@ -6,16 +6,21 @@
 
 <h1>Create</h1>
 
-<h4>Employee</h4>
+<h4>Building</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="FirstName" class="control-label"></label>
-                <input asp-for="FirstName" class="form-control" />
-                <span asp-validation-for="FirstName" class="text-danger"></span>
+                <label asp-for="Name" class="control-label"></label>
+                <input asp-for="Name" class="form-control" />
+                <span asp-validation-for="Name" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="DepartmentID" class="control-label"></label>
+                <input asp-for="DepartmentID" class="form-control" />
+                <span asp-validation-for="DepartmentID" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
