--- a/PeoplePro/PeoplePro/Views/Shared/_Layout.cshtml
+++ b/PeoplePro/PeoplePro/Views/Shared/_Layout.cshtml
@@ -35,13 +35,13 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Employees" asp-action="Index">Employees</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Employee" asp-action="Index">Employees</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Departments" asp-action="Index">Departments</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Department" asp-action="Index">Departments</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Buildings" asp-action="Index">Buildings</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Building" asp-action="Index">Buildings</a>
                         </li>
                     </ul>
                 </div>
