Developing Relational Database

--- a/PeoplePro/PeoplePro/Views/Employee/Index.cshtml
+++ b/PeoplePro/PeoplePro/Views/Employee/Index.cshtml
@@ -16,10 +16,10 @@
                 @Html.DisplayNameFor(model => model.FirstName)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.DepartmentID)
+                @Html.DisplayNameFor(model => model.Department)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.BuildingID)
+                @Html.DisplayNameFor(model => model.Building)
             </th>
             <th></th>
         </tr>
@@ -31,10 +31,10 @@
                 @Html.DisplayFor(modelItem => item.FirstName)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.DepartmentID)
+                @Html.DisplayFor(modelItem => item.Department.ID)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.BuildingID)
+                @Html.DisplayFor(modelItem => item.Building.ID)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
