--- a/PeoplePro/PeoplePro/Views/Department/Create.cshtml
+++ b/PeoplePro/PeoplePro/Views/Department/Create.cshtml
@@ -18,8 +18,8 @@
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="DepartmentHQID" class="control-label"></label>
-                <select asp-for="DepartmentHQID" class ="form-control" asp-items="ViewBag.DepartmentHQID"></select>
+                <label asp-for="Building" class="control-label"></label>
+                <select asp-for="Building" class ="form-control" asp-items="ViewBag.BuildingID"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
