--- a/PeoplePro/PeoplePro/Views/Department/Details.cshtml
+++ b/PeoplePro/PeoplePro/Views/Department/Details.cshtml
@@ -17,10 +17,10 @@
             @Html.DisplayFor(model => model.Name)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.DepartmentHQ)
+            @Html.DisplayNameFor(model => model.Building)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.DepartmentHQ.ID)
+            @Html.DisplayFor(model => model.Building.ID)
         </dd>
     </dl>
 </div>
