--- a/PeoplePro/PeoplePro/Views/Department/Index.cshtml
+++ b/PeoplePro/PeoplePro/Views/Department/Index.cshtml
@@ -16,7 +16,7 @@
                 @Html.DisplayNameFor(model => model.Name)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.DepartmentHQ)
+                @Html.DisplayNameFor(model => model.Building)
             </th>
             <th></th>
         </tr>
@@ -28,7 +28,7 @@
                 @Html.DisplayFor(modelItem => item.Name)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.DepartmentHQ.ID)
+                @Html.DisplayFor(modelItem => item.Building.ID)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
