--- a/PeoplePro/PeoplePro/Views/Employee/Create.cshtml
+++ b/PeoplePro/PeoplePro/Views/Employee/Create.cshtml
@@ -18,14 +18,12 @@
                 <span asp-validation-for="FirstName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="DepartmentID" class="control-label"></label>
-                <input asp-for="DepartmentID" class="form-control" />
-                <span asp-validation-for="DepartmentID" class="text-danger"></span>
+                <label asp-for="Building" class="control-label"></label>
+                <select asp-for="Building" class="form-control" asp-items="ViewBag.BuildingID"></select>
             </div>
             <div class="form-group">
-                <label asp-for="BuildingID" class="control-label"></label>
-                <input asp-for="BuildingID" class="form-control" />
-                <span asp-validation-for="BuildingID" class="text-danger"></span>
+                <label asp-for="Department" class="control-label"></label>
+                <select asp-for="Department" class="form-control" asp-items="ViewBag.DepartmentID"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
