--- a/PeoplePro/PeoplePro/Views/Employee/Delete.cshtml
+++ b/PeoplePro/PeoplePro/Views/Employee/Delete.cshtml
@@ -11,11 +11,23 @@
     <h4>Employee</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.FirstName)
         </dt>
-        <dd class = "col-sm-10">
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.DepartmentID)
+        </dt>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.BuildingID)
+        </dt>
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.FirstName)
+        </dd>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.DepartmentID)
+        </dd>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.BuildingID)
         </dd>
     </dl>
     
