--- a/PeoplePro/PeoplePro/Views/Employee/Edit.cshtml
+++ b/PeoplePro/PeoplePro/Views/Employee/Edit.cshtml
@@ -19,6 +19,16 @@
                 <span asp-validation-for="FirstName" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="BuildingID" class="control-label"></label>
+                <input asp-for="BuildingID" class="form-control" />
+                <span asp-validation-for="BuildingID" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="DepartmentID" class="control-label"></label>
+                <input asp-for="DepartmentID" class="form-control" />
+                <span asp-validation-for="DepartmentID" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
