current Issue: views won't show employee department and building

--- a/PeoplePro/PeoplePro/Views/Department/Index.cshtml
+++ b/PeoplePro/PeoplePro/Views/Department/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<PeoplePro.Models.Department>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Departments";
 }
 
 <h1>Index</h1>
@@ -28,7 +28,7 @@
                 @Html.DisplayFor(modelItem => item.Name)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Building.ID)
+                @Html.DisplayFor(modelItem => item.Building.Name)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
