--- a/PeoplePro/PeoplePro/Views/Employee/Details.cshtml
+++ b/PeoplePro/PeoplePro/Views/Employee/Details.cshtml
@@ -23,10 +23,10 @@
             @Html.DisplayFor(model => model.FirstName)
         </dd>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.DepartmentID)
+            @Html.DisplayFor(model => model.Department.ID)
         </dd>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.BuildingID)
+            @Html.DisplayFor(model => model.Building.ID)
         </dd>
     </dl>
 </div>
