--- a/PeopleProTraining/PeoplePro/Views/Employees/Index.cshtml
+++ b/PeopleProTraining/PeoplePro/Views/Employees/Index.cshtml
@@ -9,6 +9,14 @@
 <p>
     <a asp-action="Create">Create New</a>
 </p>
+
+<form asp-controller="Employees" asp-action="Index">
+    <p>
+        Last Name: <input type="text" name="searchString">
+        <input type="submit" value="Filter">
+    </p>
+</form>
+
 <table class="table">
     <thead>
         <tr>
