--- a/PeoplePro/PeoplePro/Views/Department/Create.cshtml
+++ b/PeoplePro/PeoplePro/Views/Department/Create.cshtml
@@ -19,7 +19,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Building" class="control-label"></label>
-                <select asp-for="Building" class ="form-control" asp-items="ViewBag.BuildingID"></select>
+                <select asp-for="Building" class ="form-control" asp-items="ViewBag.Building"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
