--- a/PeoplePro/PeoplePro/Views/Department/Details.cshtml
+++ b/PeoplePro/PeoplePro/Views/Department/Details.cshtml
@@ -20,7 +20,7 @@
             @Html.DisplayNameFor(model => model.Building)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Building.ID)
+            @Html.DisplayFor(model => model.Building.Name)
         </dd>
     </dl>
 </div>
