--- a/PeoplePro/PeoplePro/Views/Department/Edit.cshtml
+++ b/PeoplePro/PeoplePro/Views/Department/Edit.cshtml
@@ -19,9 +19,9 @@
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="BuildingID" class="control-label"></label>
-                <select asp-for="BuildingID" class="form-control" asp-items="ViewBag.BuildingID"></select>
-                <span asp-validation-for="BuildingID" class="text-danger"></span>
+                <label asp-for="Building" class="control-label"></label>
+                <select asp-for="Building" class="form-control" asp-items="ViewBag.Building"></select>
+                <span asp-validation-for="Building" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
