--- a/PeoplePro/PeoplePro/Views/Employee/Create.cshtml
+++ b/PeoplePro/PeoplePro/Views/Employee/Create.cshtml
@@ -19,11 +19,11 @@
             </div>
             <div class="form-group">
                 <label asp-for="Building" class="control-label"></label>
-                <select asp-for="Building" class="form-control" asp-items="ViewBag.BuildingID"></select>
+                <select asp-for="Building" class="form-control" asp-items="ViewBag.Building"></select>
             </div>
             <div class="form-group">
                 <label asp-for="Department" class="control-label"></label>
-                <select asp-for="Department" class="form-control" asp-items="ViewBag.DepartmentID"></select>
+                <select asp-for="Department" class="form-control" asp-items="ViewBag.Department"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
