Started on ajax append to table

--- a/DatabaseSite/DatabaseSite/Views/Home/Index.cshtml
+++ b/DatabaseSite/DatabaseSite/Views/Home/Index.cshtml
@@ -9,7 +9,7 @@
 </div>
 
 <div>
-    @Html.ActionLink("Database Link", "Index", "Employees")
+    @Html.ActionLink("Link to Database", "Index", "Employees")
 </div>
 <div class="row">
     <div class="col-md-4">
