--- a/DatabaseSite/DatabaseSite/Views/Departments/Create.cshtml
+++ b/DatabaseSite/DatabaseSite/Views/Departments/Create.cshtml
@@ -7,10 +7,10 @@
 <h2>Create</h2>
 
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>Department</h4>
         <hr />
@@ -30,6 +30,15 @@
         </div>
     </div>
 }
+
+@Ajax.ActionLink("Add Department", "AddDepartment", "Departments",
+                new AjaxOptions() { HttpMethod = "GET", OnSuccess = "success" });
+
+<script type="text/javacript">
+    function success(data) {
+    alert(data);
+    }
+</script>
 
 <div>
     @Html.ActionLink("Back to List", "Index")
