--- a/DatabaseSite/DatabaseSite/Views/Shared/_Layout.cshtml
+++ b/DatabaseSite/DatabaseSite/Views/Shared/_Layout.cshtml
@@ -6,6 +6,11 @@
     <title>@ViewBag.Title - My ASP.NET Application</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    <script src="~/Scripts/jquery-ui-1.8.24.min.js" type="text/javascript">
+    </script>
+
+    <script src="~/Scripts/jquery.unobtrusive-ajax.min.js" type="text/javascript">
+    </script>
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
@@ -40,3 +45,5 @@
     @RenderSection("scripts", required: false)
 </body>
 </html>
+
+
