Display lists of children in Department and Building index tables

--- a/PeopleProTraining/PeoplePro/Views/Departments/Index.cshtml
+++ b/PeopleProTraining/PeoplePro/Views/Departments/Index.cshtml
@@ -9,14 +9,6 @@
 <p>
     <a asp-action="Create">Create New</a>
 </p>
-
-<form asp-controller="Departments" asp-action="Index">
-    <p>
-        Name: <input type="text" name="searchString">
-        <input type="submit" value="Filter">
-    </p>
-</form>
-
 <table class="table">
     <thead>
         <tr>
@@ -26,17 +18,25 @@
             <th>
                 @Html.DisplayNameFor(model => model.Building)
             </th>
+            <th>@Html.DisplayNameFor(model => model.Employees)</th>
             <th></th>
         </tr>
     </thead>
     <tbody>
 @foreach (var item in Model) {
         <tr>
-            <td>
+         `   <td>
                 @Html.DisplayFor(modelItem => item.Name)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Building.Name)
+            </td>
+            <td>
+    @foreach (var employee in item.Employees) {
+                <span>@Html.DisplayFor(modelEmployee => employee.FirstName)</span>
+                <span>@Html.DisplayFor(modelEmployee => employee.LastName)</span>
+                <span>|</span>
+    }
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
