--- a/PeopleProTraining/PeoplePro/Views/Buildings/Index.cshtml
+++ b/PeopleProTraining/PeoplePro/Views/Buildings/Index.cshtml
@@ -9,19 +9,14 @@
 <p>
     <a asp-action="Create">Create New</a>
 </p>
-
-<form asp-controller="Buildings" asp-action="Index">
-    <p>
-        Name: <input type="text" name="searchString">
-        <input type="submit" value="Filter">
-    </p>
-</form>
-
 <table class="table">
     <thead>
         <tr>
             <th>
                 @Html.DisplayNameFor(model => model.Name)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Departments)
             </th>
             <th></th>
         </tr>
@@ -31,6 +26,12 @@
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.Name)
+            </td>
+            <td>
+    @foreach (var department in item.Departments) {
+                <span>@Html.DisplayFor(modelDepartment => department.Name)</span>
+                <span>|</span>
+    }
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
