--- a/DatabaseSite/DatabaseSite/Views/Shared/Partials/CreateDepartmentPartial.cshtml
+++ b/DatabaseSite/DatabaseSite/Views/Shared/Partials/CreateDepartmentPartial.cshtml
@@ -1,10 +1,23 @@
 ﻿@model DatabaseSite.Models.Department
+<div id="CreateForm">
+@using (Html.BeginForm())
+{
+    @Html.AntiForgeryToken()
 
+    <div class="form-horizontal">
+        <h4>Department</h4>
+        <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
             @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control", @id = "DepNameInput" } })
                 @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
             </div>
         </div>
+    </div>
+}
+<div>
+    <button id="AddButton">Create Department</button>
+</div>
+</div>
