--- a/PeoplePro/PeoplePro/Views/Building/Index.cshtml
+++ b/PeoplePro/PeoplePro/Views/Building/Index.cshtml
@@ -15,6 +15,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.Name)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Departments)
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -25,9 +28,21 @@
                 @Html.DisplayFor(modelItem => item.Name)
             </td>
             <td>
+                @foreach (var department in item.Departments)
+                {
+                    @Html.DisplayFor(modelItem => department.Name) <br />
+                }
+            </td>
+            <td>
                 <a asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.ID">Details</a> |
                 <a asp-action="Delete" asp-route-id="@item.ID">Delete</a>
+                @if (!ViewData.ModelState.IsValid && ViewData.ModelState["Error"].Errors.Count > 0)
+                {
+                    <div class="alert alert-">
+                    <strong>Error!</strong> danger">@ViewData.ModelState["Error"].Errors.First().ErrorMessage
+                    </div>
+                }
             </td>
         </tr>
 }
