--- a/PeoplePro/PeoplePro/Views/Department/Index.cshtml
+++ b/PeoplePro/PeoplePro/Views/Department/Index.cshtml
@@ -18,6 +18,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.Building)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Employees)
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -29,6 +32,12 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Building.Name)
+            </td>
+            <td>
+                @foreach (var Employee in item.Employees)
+                {
+                    @Html.DisplayFor(modelItem => Employee.FirstName) <br />
+                }
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
