--- a/DatabaseSite/DatabaseSite/Views/Shared/Partials/CreateDepartmentPartial.cshtml
+++ b/DatabaseSite/DatabaseSite/Views/Shared/Partials/CreateDepartmentPartial.cshtml
@@ -18,6 +18,11 @@
     </div>
 }
 <div>
-    <button id="AddButton">Create Department</button>
+    <span>
+        <button id="AddButton">Create Department</button>
+    </span>
+    <span>
+        <button id="CancelButton">Cancel</button>
+    </span>
 </div>
 </div>
