Added DisplayTemplates and some other html updates

--- a/DatabaseSite/DatabaseSite/Views/Departments/Details.cshtml
+++ b/DatabaseSite/DatabaseSite/Views/Departments/Details.cshtml
@@ -4,21 +4,10 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+<h2>Department Details</h2>
 
 <div>
-    <h4>Department</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-
-    </dl>
+    @Html.DisplayForModel()
 </div>
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.DepartmentId }) |
