--- a/DatabaseSite/DatabaseSite/Views/Buildings/Delete.cshtml
+++ b/DatabaseSite/DatabaseSite/Views/Buildings/Delete.cshtml
@@ -4,30 +4,9 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
-
-<h3>Are you sure you want to delete this?</h3>
+<h3>Are you sure you want to delete this building?</h3>
 <div>
-    <h4>Building</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Address)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Address)
-        </dd>
-
-    </dl>
+    @Html.DisplayForModel()
 
     @using (Html.BeginForm()) {
         @Html.AntiForgeryToken()
