--- a/DatabaseSite/DatabaseSite/Views/Buildings/Details.cshtml
+++ b/DatabaseSite/DatabaseSite/Views/Buildings/Details.cshtml
@@ -4,29 +4,10 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+<h2>Building Details</h2>
 
 <div>
-    <h4>Building</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Address)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Address)
-        </dd>
-
-    </dl>
+    @Html.DisplayForModel()
 </div>
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.BuildingId }) |
