--- a/DatabaseSite/DatabaseSite/Views/Departments/Delete.cshtml
+++ b/DatabaseSite/DatabaseSite/Views/Departments/Delete.cshtml
@@ -6,20 +6,9 @@
 
 <h2>Delete</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Are you sure you want to delete this department?</h3>
 <div>
-    <h4>Department</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-
-    </dl>
+    @Html.DisplayForModel();
 
     @using (Html.BeginForm()) {
         @Html.AntiForgeryToken()
