--- a/DatabaseSite/DatabaseSite/Views/Employees/Details.cshtml
+++ b/DatabaseSite/DatabaseSite/Views/Employees/Details.cshtml
@@ -4,45 +4,9 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
-
+<h2>Employee Details</h2>
 <div>
-    <h4>Employee</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.FirstName)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.FirstName)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.LastName)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.LastName)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Building.Name)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Building.Name)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Department.Name)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Department.Name)
-        </dd>
-
-    </dl>
+    @Html.DisplayForModel()
 </div>
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.EmployeeId }) |
