--- a/DatabaseSite/DatabaseSite/Views/Shared/Partials/CreateDepartmentPartial.cshtml
+++ b/DatabaseSite/DatabaseSite/Views/Shared/Partials/CreateDepartmentPartial.cshtml
@@ -19,10 +19,10 @@
 }
 <div>
     <span>
-        <button id="AddButton">Create Department</button>
+        <button id="AddButton" class="btn btn-default">Create Department</button>
     </span>
     <span>
-        <button id="CancelButton">Cancel</button>
+        <button id="CancelButton" class="btn btn-default">Cancel</button>
     </span>
 </div>
 </div>
