--- a/DatabaseSite/DatabaseSite/Views/Shared/_Layout.cshtml
+++ b/DatabaseSite/DatabaseSite/Views/Shared/_Layout.cshtml
@@ -21,13 +21,13 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("PeoplePro Database", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Departments", "Index", "Departments")</li>
+                    <li>@Html.ActionLink("Buildings", "Index", "Buildings")</li>
+                    <li>@Html.ActionLink("Employees", "Index", "Employees")</li>
                 </ul>
             </div>
         </div>
