--- a/DatabaseSite/DatabaseSite/Views/Shared/Partials/CreateDepartmentPartial.cshtml
+++ b/DatabaseSite/DatabaseSite/Views/Shared/Partials/CreateDepartmentPartial.cshtml
@@ -4,8 +4,7 @@
 {
     @Html.AntiForgeryToken()
 
-    <div class="form-horizontal">
-        <h4>Department</h4>
+    <div class="form-horizontal" id="InnerForm">
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
