working on ajax modal

--- a/PeoplePro/PeoplePro/Views/Department/Index.cshtml
+++ b/PeoplePro/PeoplePro/Views/Department/Index.cshtml
@@ -8,11 +8,6 @@
 
 <div id="modal-placeholder"></div>
 
-<!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" data-toggle="ajax-modal" data-target="#add-department" data-url="@Url.Action("createDepartment")">
-    Add Department
-</button>
-
 <table class="table">
     <thead>
         <tr>
@@ -54,3 +49,7 @@
     </tbody>
 </table>
 
+<!-- Button trigger modal -->
+<button type="button" class="btn btn-primary" data-toggle="ajax-modal" data-target="#add-department" data-url="@Url.Action("DepartmentModal")">
+    Add Department
+</button>
