--- a/PeoplePro/PeoplePro/Views/Department/_DepartmentModalPartial.cshtml
+++ b/PeoplePro/PeoplePro/Views/Department/_DepartmentModalPartial.cshtml
@@ -4,34 +4,33 @@
     ViewData["Title"] = "Create New Department";
 }
 
-<h1>Create New Department</h1>
 <!-- Modal -->
-<div class="modal fade" id="add-department" tabindex="-1" role="dialog" aria-labelledby="addModalLabel" aria-hidden="true">
+<div class="modal fade" id="add-department" tabindex="-1" role="dialog" aria-labelledby="addDepartmentLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="addDepartmentLabel">Add contact</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <h5 class="modal-title" id="addDepartmentLabel">Add Department</h5>
+                <button type="button" class="close" data-dismiss="ajax-modal" aria-label="Close">
                     <span aria-hidden="true">×</span>
                 </button>
             </div>
             <div class="modal-body">
-                <form>
+                <form asp-action="DepartmentModal">
                     <div class="form-group">
                         <label asp-for="Name"></label>
                         <input asp-for="Name" class="form-control" />
                         <span asp-validation-for="Name" class="text-danger"></span>
                     </div>
                     <div class="form-group">
-                        <label asp-for="BuildingID"></label>
-                        <input asp-for="BuildingID" class="form-control" />
+                        <label asp-for="BuildingID">Building</label>
+                        <select asp-for="BuildingID" class="form-control" asp-items="ViewBag.Building"/>
                         <span asp-validation-for="BuildingID" class="text-danger"></span>
                     </div>
                 </form>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Save</button>
+                <button type="button" class="btn btn-primary" data-save="modal">Save</button>
             </div>
         </div>
     </div>
