finished ajax implementation

--- a/PeoplePro/PeoplePro/Views/Building/Index.cshtml
+++ b/PeoplePro/PeoplePro/Views/Building/Index.cshtml
@@ -6,9 +6,8 @@
 
 <h1>Index</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
+<div id="modal-placeholder"></div>
+
 <table class="table">
     <thead>
         <tr>
@@ -22,29 +21,35 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                @foreach (var department in item.Departments)
-                {
-                    @Html.DisplayFor(modelItem => department.Name) <br />
-                }
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.ID">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.ID">Delete</a>
-                @if (!ViewData.ModelState.IsValid && ViewData.ModelState["Error"].Errors.Count > 0)
-                {
-                    <div class="alert alert-">
-                    <strong>Error!</strong> danger">@ViewData.ModelState["Error"].Errors.First().ErrorMessage
-                    </div>
-                }
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Name)
+                </td>
+                <td>
+                    @foreach (var department in item.Departments)
+                    {
+                        @Html.DisplayFor(modelItem => department.Name) <br />
+                    }
+                </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@item.ID">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.ID">Delete</a>
+                    @if (!ViewData.ModelState.IsValid && ViewData.ModelState["Error"].Errors.Count > 0)
+                    {
+                        <div class="alert alert-">
+                            <strong>Error!</strong> danger">@ViewData.ModelState["Error"].Errors.First().ErrorMessage
+                        </div>
+                    }
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
+
+<!-- Button trigger modal -->
+<button type="button" class="btn btn-primary" data-toggle="ajax-modal" data-target="#add-building" data-url="@Url.Action("BuildingModal")">
+    Add Building
+</button>
