--- a/DatabaseSite/DatabaseSite/Views/Departments/Delete.cshtml
+++ b/DatabaseSite/DatabaseSite/Views/Departments/Delete.cshtml
@@ -8,7 +8,7 @@
 
 <h3>Are you sure you want to delete this department?</h3>
 <div>
-    @Html.DisplayForModel();
+    @Html.DisplayForModel()
 
     @using (Html.BeginForm()) {
         @Html.AntiForgeryToken()
