--- a/DatabaseSite/DatabaseSite/Views/Login/Index.cshtml
+++ b/DatabaseSite/DatabaseSite/Views/Login/Index.cshtml
@@ -1,35 +1,13 @@
 ﻿@model DatabaseSite.Models.Login
 
 <h1>
-    Data
-    Name: @Html.DisplayFor(x => x.UserName)
-    Password: @Html.DisplayFor(x => x.Password)
+    Login to change the database
 </h1>
 
 
 @using (Html.BeginForm("Login", "Login", FormMethod.Post))
 {
-<div class="form-horizontal">
-
-    <hr />
-    <div class="form-group">
-        <div class="col-md-10">
-            @Html.TextBoxFor(s => s.UserName, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.UserName, "", new { @class = "text-danger" })
-        </div>
-    </div>
-    <div class="form-group">
-        <div class="col-md-10">
-            @Html.TextBoxFor(s => s.Password, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
-        </div>
-    </div>
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-default" />
-        </div>
-    </div>
-</div>
+    @Html.EditorForModel()
 }
 
 @section Scripts {
