fixed ajax issue, started implementing testing

--- a/PeoplePro/PeoplePro/Views/Employee/Index.cshtml
+++ b/PeoplePro/PeoplePro/Views/Employee/Index.cshtml
@@ -8,43 +8,7 @@
 
 <div id="modal-placeholder"></div>
 
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.FirstName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Department)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Building)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model)
-        {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.FirstName)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Department.Name)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Building.Name)
-                </td>
-                <td>
-                    <a asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@item.ID">Details</a> |
-                    <a asp-action="Delete" asp-route-id="@item.ID">Delete</a>
-                </td>
-            </tr>
-        }
-    </tbody>
-</table>
+@await  Html.PartialAsync("_Table", Model)
 
 <!-- Button trigger modal -->
 <button type="button" class="btn btn-primary" data-toggle="ajax-modal" data-target="#add-employee" data-url="@Url.Action("EmployeeModal")">
