--- a/PeoplePro/PeoplePro/Views/Building/Index.cshtml
+++ b/PeoplePro/PeoplePro/Views/Building/Index.cshtml
@@ -8,46 +8,7 @@
 
 <div id="modal-placeholder"></div>
 
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Departments)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model)
-        {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Name)
-                </td>
-                <td>
-                    @foreach (var department in item.Departments)
-                    {
-                        @Html.DisplayFor(modelItem => department.Name) <br />
-                    }
-                </td>
-                <td>
-                    <a asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@item.ID">Details</a> |
-                    <a asp-action="Delete" asp-route-id="@item.ID">Delete</a>
-                    @if (!ViewData.ModelState.IsValid && ViewData.ModelState["Error"].Errors.Count > 0)
-                    {
-                        <div class="alert alert-">
-                            <strong>Error!</strong> danger">@ViewData.ModelState["Error"].Errors.First().ErrorMessage
-                        </div>
-                    }
-                </td>
-            </tr>
-        }
-    </tbody>
-</table>
+@await Html.PartialAsync("_Table", Model)
 
 <!-- Button trigger modal -->
 <button type="button" class="btn btn-primary" data-toggle="ajax-modal" data-target="#add-building" data-url="@Url.Action("BuildingModal")">
