--- a/PeoplePro/PeoplePro/Views/Employee/_EmployeeModalPartial.cshtml
+++ b/PeoplePro/PeoplePro/Views/Employee/_EmployeeModalPartial.cshtml
@@ -28,7 +28,7 @@
                         <span asp-validation-for="BuildingID" class="text-danger"></span>
                     </div>
                     <div class="form-group">
-                        <label asp-for="DepartmentID">Building</label>
+                        <label asp-for="DepartmentID">Department</label>
                         <select asp-for="DepartmentID" class="form-control" asp-items="ViewBag.Department"></select>
                         <span asp-validation-for="DepartmentID" class="text-danger"></span>
                     </div>
