--- a/PeoplePro/PeoplePro/wwwroot/css/site.css
+++ b/PeoplePro/PeoplePro/wwwroot/css/site.css
@@ -45,6 +45,14 @@ body {
   /* Margin bottom by footer height */
   margin-bottom: 60px;
 }
+
+a {
+    color: #e15363;
+}
+
+h1, h2, h3, h4, h5 {
+    font-weight: 600;
+}
 .footer {
   position: absolute;
   bottom: 0;
